--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,6 +10,10 @@
     <style name="Base.Theme.VIAMM.NoActionBar" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your theme here -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+
+        <!-- Custom theme for status bar -->
+        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:statusBarColor">@color/transparent</item>
     </style>
 
     <style name="Theme.VIAMM" parent="Base.Theme.VIAMM" />
