--- a/app/src/main/res/drawable/viamm_bg.xml
+++ b/app/src/main/res/drawable/viamm_bg.xml
@@ -1,3 +1,11 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
+
     <solid android:color="@color/app_bg_color" />
+
+<!--     <gradient-->
+<!--        android:type="linear"-->
+<!--        android:angle="100"-->
+<!--        android:startColor="#EF8CD1"-->
+<!--        android:endColor="#7B8EE4" /> -->
+
 </shape>
