--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -33,6 +33,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         tools:listitem="@layout/item_order" />
 
+<!--When no booking found-->
     <!-- Title -->
     <TextView
         android:id="@+id/tvNoOngoingBookingh1"
@@ -77,7 +78,7 @@
         android:textColor="@color/white"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:padding="15dp"
+        android:padding="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
