fix: - fixed api for ongoing and complete bookings - fixed display for edit records - adjust the font size of the records - added customer, date on record details

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,6 +22,7 @@
 <!-- Status Colors -->
     <color name="Status_Cancelled">#F21F1F</color>
     <color name="Status_Complete">#1EF01E</color>
+    <color name="Status_Completelight">#2FA94B</color>
     <color name="Status_Ongoing">#FF8C00</color>
 
 <!-- Custom Alert Dialong Colors -->
