--- a/app/src/main/res/layout/activity_edit_record.xml
+++ b/app/src/main/res/layout/activity_edit_record.xml
@@ -1,5 +1,4 @@
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/editrecord"
@@ -16,17 +15,17 @@
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:layout_constraintTop_toTopOf="parent"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        app:title="Booking Order" />
+        app:title="Booking Record" />
 
     <TextView
         android:id="@+id/tvRecordID"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="18dp"
         android:text="Booking Number:"
         android:textColor="@android:color/black"
-        android:textSize="18sp"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar" />
@@ -35,65 +34,70 @@
         android:id="@+id/tvRecordStatus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="8dp"
-        android:text="Booking Status:"
+        android:layout_marginTop="20dp"
+        android:text="Status:"
         android:textColor="@android:color/black"
-        android:textSize="18sp"
+        android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvRecordID" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.757"
+        app:layout_constraintStart_toEndOf="@+id/tvRecordID"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
     <TextView
         android:id="@+id/tvRecordMasseur"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
         android:text="Masseur:"
         android:textColor="@android:color/black"
-        android:textSize="18sp"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvRecordStatus" />
+        app:layout_constraintTop_toBottomOf="@+id/tvRecordCustomer" />
 
     <TextView
-        android:id="@+id/tvRecordDate"
+        android:id="@+id/tvRecordCustomer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="8dp"
-        android:text="Booking Date &amp; Time:"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="12dp"
+        android:text="Customer:"
         android:textColor="@android:color/black"
-        android:textSize="18sp"
+        android:textSize="20sp"
         android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvRecordMasseur" />
+        app:layout_constraintTop_toBottomOf="@+id/tvRecordID" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/innerLayout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/tvRecordDate"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvRecordDate">
 
         <ScrollView
             android:id="@+id/sv_tbl_rec"
             android:layout_width="match_parent"
-            android:layout_height="237dp"
-            android:layout_marginTop="16dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:padding="5dp"
+            android:backgroundTint="@color/white"
             app:layout_constraintBottom_toTopOf="@+id/tvTotalCost"
             app:layout_constraintTop_toTopOf="parent"
             tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteX="16dp"
-            android:padding="5dp">
+            tools:layout_editor_absoluteX="0dp">
 
             <TableLayout
                 android:id="@+id/tblRecord"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:padding="5dp">
+                android:padding="5dp"
+                android:backgroundTint="@color/white">
 
                 <!-- Header row -->
 
@@ -109,12 +113,13 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:background="@android:color/white"
                         android:gravity="center_horizontal"
                         android:padding="4dp"
-                        android:text="Amount"
+                        android:text="Count"
+                        android:textSize="20sp"
                         android:textColor="@android:color/black"
-                        android:textStyle="bold"
-                        android:background="@android:color/white"/>
+                        android:textStyle="bold" />
 
                     <!--Vertical line-->
                     <View
@@ -126,12 +131,13 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="2"
+                        android:background="@android:color/white"
                         android:gravity="center_horizontal"
                         android:padding="4dp"
                         android:text="Service"
+                        android:textSize="20sp"
                         android:textColor="@android:color/black"
-                        android:textStyle="bold"
-                        android:background="@android:color/white"/>
+                        android:textStyle="bold" />
 
                     <!--Vertical line-->
                     <View
@@ -143,12 +149,13 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:background="@android:color/white"
                         android:gravity="center_horizontal"
                         android:padding="4dp"
                         android:text="Price"
+                        android:textSize="20sp"
                         android:textColor="@android:color/black"
-                        android:textStyle="bold"
-                        android:background="@android:color/white"/>
+                        android:textStyle="bold" />
 
                     <!--Vertical line-->
                     <View
@@ -167,29 +174,43 @@
             android:id="@+id/tvTotalCost"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="10dp"
             android:text="Total Amount:"
             android:textColor="@android:color/black"
-            android:textSize="18sp"
-            app:layout_constraintStart_toStartOf="parent"
+            android:textSize="20sp"
             android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.833"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/sv_tbl_rec" />
 
         <Button
             android:id="@+id/btnRecordBack"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Back"
             android:backgroundTint="@color/app_back"
+            android:padding="30dp"
+            android:text="Back"
             android:textColor="@color/white"
             android:textSize="20sp"
             android:textStyle="bold"
-            android:padding="30dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvTotalCost"
-            app:layout_constraintVertical_bias="0.9"/>
+            app:layout_constraintVertical_bias="0.9" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
+        android:id="@+id/tvRecordDate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
+        android:text="Booking Date:"
+        android:textColor="@android:color/black"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvRecordMasseur" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
