--- a/app/src/main/res/layout/activity_edit_record.xml
+++ b/app/src/main/res/layout/activity_edit_record.xml
@@ -15,7 +15,7 @@
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:layout_constraintTop_toTopOf="parent"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        app:title="Booking Record" />
+        app:title="Record Details" />
 
     <TextView
         android:id="@+id/tvRecordID"
@@ -40,7 +40,7 @@
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.757"
+        app:layout_constraintHorizontal_bias="0.760"
         app:layout_constraintStart_toEndOf="@+id/tvRecordID"
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
@@ -115,7 +115,7 @@
                         android:layout_weight="1"
                         android:background="@android:color/white"
                         android:gravity="center_horizontal"
-                        android:padding="4dp"
+                        android:padding="5dp"
                         android:text="Count"
                         android:textSize="20sp"
                         android:textColor="@android:color/black"
@@ -133,7 +133,7 @@
                         android:layout_weight="2"
                         android:background="@android:color/white"
                         android:gravity="center_horizontal"
-                        android:padding="4dp"
+                        android:padding="5dp"
                         android:text="Service"
                         android:textSize="20sp"
                         android:textColor="@android:color/black"
@@ -151,7 +151,7 @@
                         android:layout_weight="1"
                         android:background="@android:color/white"
                         android:gravity="center_horizontal"
-                        android:padding="4dp"
+                        android:padding="5dp"
                         android:text="Price"
                         android:textSize="20sp"
                         android:textColor="@android:color/black"
