--- a/app/src/main/res/layout/activity_scanner.xml
+++ b/app/src/main/res/layout/activity_scanner.xml
@@ -7,4 +7,10 @@
     android:layout_height="match_parent"
     tools:context=".ScannerActivity">
 
+
+    <WebView
+        android:id="@+id/scanner_WV"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
